fix empty favorites offer-wrapper adding extra padding
fixes #36

--- a/css/offers.css
+++ b/css/offers.css
@@ -5,7 +5,7 @@
     @simple-extend-addto material-box;
     padding: 0;
     background-color: #fff;
-    & + .offers-wrap {
+    &.filled + .offers-wrap.filled {
       margin-top: 15px;
     }
 }
